--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -33,10 +33,10 @@
           display: none
 .logo
   width: 177px
+  overflow: hidden
 .search
   display: flex
   position: relative
-  overflow: hidden
   height: 40px
   border-radius: 6px
   &__input
@@ -62,6 +62,7 @@
   display: flex
   align-items: center
   text-decoration: none
+  overflow: hidden
   &__avatar
     width: 40px
     height: 40px
