--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -23,6 +23,7 @@
     justify-content: space-between
     max-width: 731px
     margin: auto
+    overflow: hidden
   &-title
     color: $light
     font-weight: 300
